Fix deployment errors and linter issues

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-window": "^1.8.8",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "isomorphic-dompurify": "^2.26.0",
