--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@upstash/redis": "^1.35.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.0.0",
     "isomorphic-dompurify": "^2.26.0",
     "next": "15.3.5",
