--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "isomorphic-dompurify": "^2.26.0",
     "next": "15.3.5",
     "next-seo": "^6.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "web-vitals": "^5.0.3",
@@ -45,9 +45,5 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
-  },
-  "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
   }
 }
