--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
-    "framer-motion": "^12.0.0",
     "isomorphic-dompurify": "^2.26.0",
     "next": "15.3.5",
     "next-seo": "^6.6.0",
@@ -33,6 +32,10 @@
     "react-window-infinite-loader": "^1.0.10",
     "web-vitals": "^5.0.3",
     "zod": "^4.0.5"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
