feat: add Playwright configuration for testing
feat(api): implement cache clearing API endpoints

feat(db): add database status check and force clean functionality

feat(duplicates): implement duplicate cleanup for AI tools

feat(debug): add debugging utility for API comparison issues

test: add tests for compare page functionality

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx src/lib/seed.ts",
+    "db:seed-safe": "tsx src/lib/cleanup-duplicates.ts seed-safe",
+    "db:cleanup": "tsx src/lib/cleanup-duplicates.ts cleanup",
+    "db:check": "tsx src/lib/check-db.ts",
+    "debug:compare": "tsx src/lib/debug-compare.ts",
     "db:studio": "prisma studio",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
